# mlops-2023

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.swj  .pre-commit-config.yaml.swk  .pre-commit-config.yaml.swl  .pre-commit-config.yaml.swm  .pre-commit-config.yaml.swn  .pre-commit-config.yaml.swo  .pre-commit-config.yaml.swp  .pyproject.toml.swo  .pyproject.toml.swp  README.md  animal_dataset.py  data.dvc  infer.py  pyproject.toml  train.py
.dvc/: config
.github/workflows/: pre-commit.yml
configs/: config.yaml
